# tauri-synth

./: .gitignore  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  core.rs  lib.rs  main.rs
src-tauri/src/control/: midi.rs  mod.rs
src-tauri/src/core/: dsp.rs  enveloppe.rs  mod.rs  oscillators.rs
src/components/: Button.tsx  Keyboard.tsx
