[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = "unwind"
incremental = false
codegen-units = 16
rpath = false

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.10", features = [ "event" ] }
cpal = "0.12.0"
rand = "0.7.3"
midir = "0.6.2"
plotlib = "0.5.1"
rume = { git = "https://github.com/nicochatzi/rume", branch = "main" }
heapless = "0.5.6"

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "app"
path = "src/main.rs"
